<resources>
    <string name="app_name">iMates</string>

    <string name="invalid_username">用户名不正确</string>
    <string name="invalid_password">密码至少5个字符</string>
    <string name="login_moto">长风破浪会有时\n直挂云帆济沧海</string>
    <string name="login_tip_user_name">请输入账号</string>
    <string name="login_tip_passwd">请输入密码</string>
    <string name="login_button_text">登 录</string>

    <!-- Error messages -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="subject_name_chinese">语文</string>
    <string name="subject_name_math">数学</string>
    <string name="subject_name_english">英语</string>
    <string name="subject_name_physics">物理</string>
    <string name="subject_name_chemistry">化学</string>
    <string name="subject_name_biology">生物</string>
    <string name="student_status_title">我的</string>
    <string name="take_photo_solve_question">拍照解题</string>
    <string name="my_favorite">收藏中心</string>
    <string name="question_list">习题列表</string>
    <string name="history_archive">历史档案</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="chatbot_name">学伴</string>
    <string name="tip_login_success">登录成功</string>
    <string name="crop_image_fail">图片剪切失败</string>
    <string name="check_answer">查看答案</string>
    <string name="similar_questions">举一反三</string>
    <string name="shoot_question">拍照识题</string>
    <string name="ai_guide_question">AI引导解题</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--    mupdf -->
    <string name="select">选择</string>
    <string name="copy">拷贝</string>
    <string name="save">保存</string>
    <string name="pdf_tools_accept">接受</string>
    <string name="pdf_tools_copy">拷贝</string>
    <string name="pdf_tools_delete">删除</string>
    <string name="pdf_tools_draw_annotation">请绘制</string>
    <string name="pdf_tools_highlight">高亮</string>
    <string name="pdf_tools_ink">手绘</string>
    <string name="pdf_tools_outline_title">目录</string>
    <string name="pdf_tools_search">请输入要搜索的内容</string>
    <string name="pdf_tools_search_backwards">向后搜索</string>
    <string name="pdf_tools_search_document">搜索文档</string>
    <string name="pdf_tools_search_forwards">向前搜索</string>
    <string name="pdf_tools_strike_out">删除线</string>
    <string name="pdf_tools_toggle_links">启用超链接</string>
    <string name="pdf_tools_toggle_reflow_mode">切换重排模式</string>
    <string name="pdf_tools_underline">下划线</string>
    <string name="dialog_title">提示</string>
    <string name="document_has_changes_save_them">文件已经修改，是否保存？</string>
    <string name="no_media_warning">未检测到存储介质</string>
    <string name="no_media_hint">与PC共享存储介质可能使其无法访问</string>
    <string name="cancel">取消</string>
    <string name="search_backwards">向后搜索</string>
    <string name="search_forwards">向前搜索</string>
    <string name="search_document">搜索文档</string>
    <string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
    <string name="outline_title">目录</string>
    <string name="enter_password">输入密码</string>
    <string name="text_not_found">文本未找到</string>
    <string name="searching_">搜索&#8230;</string>
    <string name="toggle_links">启用超链接</string>
    <string name="no_further_occurrences_found">未找到更多结果</string>
    <!--    -->
    <!--    <string name="select">Select</string>-->
    <!--    <string name="search">Search</string>-->
    <!--    <string name="copy">Copy</string>-->
    <!--    <string name="strike_out">Strike-out</string>-->
    <!--    <string name="delete">Delete</string>-->
    <!--    <string name="highlight">Highlight</string>-->
    <!--    <string name="underline">Underline</string>-->
    <!--    <string name="edit_annotations">Edit annotations</string>-->
    <!--    <string name="ink">Ink</string>-->
    <!--    <string name="save">Save</string>-->
    <!--    <string name="proof">Proof</string>-->
    <!--    <string name="separation">Separation</string>-->
    <!--    <string name="print">Print</string>-->
    <string name="dismiss">忽略</string>
    <!--    <string name="parent_directory">[Up one level]</string>-->
    <string name="yes">是</string>
    <string name="no">否</string>
    <!--    <string name="entering_reflow_mode">Entering reflow mode</string>-->
    <!--    <string name="leaving_reflow_mode">Leaving reflow mode</string>-->
    <!--    <string name="print_failed">Print failed</string>-->
    <string name="select_text">选择文本</string>
    <string name="copied_to_clipboard">拷贝到剪贴板</string>
    <string name="no_text_selected">未选中文字</string>
    <!--    <string name="draw_annotation">Draw annotation</string>-->
    <string name="nothing_to_save">没有要保存的内容</string>
    <!--    <string name="document_has_changes_save_them_">Document has changes. Save them?</string>-->
    <string name="cannot_open_document">无法打开文档</string>
    <!--    <string name="cannot_open_document_Reason">Cannot open document: %1$s</string>-->
    <!--    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>-->
    <!--    <string name="cannot_open_buffer">Cannot open buffer</string>-->
    <!--    <string name="fill_out_text_field">Fill out text field</string>-->
    <string name="okay">好的</string>
    <!--    <string name="choose_value">Choose value</string>-->
    <!--    <string name="not_supported">Not supported</string>-->
    <string name="copy_text_to_the_clipboard">拷贝文本到剪贴板</string>
    <!--    <string name="more">More</string>-->
    <!--    <string name="accept">Accept</string>-->
    <string name="copy_text">拷贝文本</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">下一个</string>
    <string name="previous">上一个</string>

    <string name="action_settings">设置</string>
    <string name="menu_transform">变换</string>
    <string name="menu_reflow">重排</string>
    <string name="menu_slideshow">侧滑</string>
    <string name="menu_settings">设置</string>
    <string name="login_failed">登录失败</string>
    <string name="prompt_email">邮件</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登入或注册</string>
    <string name="action_sign_in_short">登入</string>
    <string name="welcome">欢迎您!</string>
    <string name="error_fragment_message">出现了错误</string>
    <string name="dismiss_error">忽略</string>
    <string name="todo_list_title"><![CDATA[清单 >]]></string>
    <string name="todo_add_item">+待办</string>
    <string name="Capture">拍照</string>
    <string name="crop_done">裁剪好了</string>
    <string name="finish">返回</string>
    <string name="tip_login_fail">登录失败</string>
    <string name="question_recognize_fail">识别题目失败</string>
    <string name="network_error">网络错误</string>
    <string name="server_responce_error">服务器出现问题</string>
    <string name="summit">提交反馈</string>
    <string name="summit_in_progress">提交中...</string>
    <string name="chat_ai_catalog_default">学伴</string>
    <string name="chat_ai_catalog_teacher">教师答疑</string>
    <string name="chat_ai_default_session_name">学伴默认</string>
    <string name="chat_ai_input_hint">请输入内容</string>
    <string name="chat_ai_press_to_speak">按住 说话</string>
    <string name="chat_ai_release_to_end_speak">松开结束录音并发送</string>
    <string name="chat_ai_new_session_name">新对话</string>
    <string name="popup_alert_dialog_confirm">确认</string>
    <string name="popup_alert_dialog_cancel">取消</string>
    <string name="chat_ai_menu_catalog_rename">重命名</string>
    <string name="chat_ai_menu_catalog_delete">删除</string>
    <string name="chat_ai_menu_session_rename">重命名</string>
    <string name="chat_ai_menu_session_delete">删除</string>
    <string name="chat_ai_menu_session_clear">清空</string>
    <string name="subject_name_all">其他</string>
    <string name="chat_ai_catalog_my_favor">我的收藏</string>
    <string name="chat_ai_default_favor_name">收藏1</string>
    <string name="chat_ai_voice_hint">按住 说话</string>
    <string name="chat_ai_release_to_cancel">松开取消</string>
    <string name="chat_ai_forward_to_teacher">发给老师</string>
    <string name="question_solve_ask_teacher">老师答疑</string>
    <string name="pdf_tools_eraser">橡皮擦</string>
    <string name="pdf_tools_eraser_annotation">擦除对象</string>

    <!--    <string name="format_currently_not_supported">Format currently not supported</string>-->
    <!--    <string name="toggle_reflow_mode">Toggle reflow mode</string>-->
    <!--    <string name="select_certificate_and_sign">Select certificate and sign?</string>-->
    <!--    <string name="signature_checked">Signature checked</string>-->

    <string name="permission_storage_rationale">需要存储权限来下载教材文件</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>