<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <TextView
        android:id="@+id/moto_text"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintWidth_percent="0.33"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/login_user_info_bg"
        android:orientation="vertical"
        android:gravity="center">

        <!-- 用户名输入框 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <!-- 输入框 -->
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/login_edit_text_background"
                android:drawableStart="@drawable/login_user_id_ico"
                android:drawablePadding="8dp"
                android:hint="@string/login_tip_user_name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="#AAAAAA" />

            <!-- 错误提示 -->
            <TextView
                android:id="@+id/username_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invalid_username"
                android:textColor="#FF0000"
                android:textSize="@dimen/login_input_text_size"
                android:visibility="invisible" />
        </LinearLayout>

        <!-- 密码输入框 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <!-- 输入框 -->
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edit_text_background"
                android:drawableStart="@drawable/login_password_ico"
                android:drawablePadding="8dp"
                android:hint="@string/login_tip_passwd"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="#AAAAAA" />

            <!-- 错误提示 -->
            <TextView
                android:id="@+id/password_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invalid_password"
                android:textColor="#FF0000"
                android:textSize="@dimen/login_input_text_size"
                android:visibility="invisible" />
        </LinearLayout>

        <!-- 登录按钮 -->

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/login_button_text"
            android:textColor="@color/white"
            android:textSize="27sp" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:id="@+id/version"
        android:textColor="#000000"
        android:clickable="true"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>