<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.FragmentSubjectBiology">


    <Button
        android:id="@+id/btn_exit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_back"
        android:stateListAnimator="@animator/app_button_click_scale"
        android:layout_marginHorizontal="@dimen/min_margin_size"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_exit"/>


    <View
        android:id="@+id/spliter0"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@id/btn_exit"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_empty_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#800000"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        android:text="没有习题? 可以拍照搜题或者从练习知识点获取题目."
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spliter0"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exerciseList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/verticalGuide"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_empty_question"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <com.cosinetech.imates.views.MarkdownTextView
        android:id="@+id/answerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/spliter"
        app:layout_constraintStart_toStartOf="@id/verticalGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/similarExerciseView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="1dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/spliter"
        app:layout_constraintStart_toStartOf="@id/verticalGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <com.cosinetech.imates.views.ChatAiView
        android:id="@+id/chat_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/btn_capture"
        app:layout_constraintStart_toStartOf="@id/verticalGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:minHeight="36dp"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/verticalGuide">

        <RadioButton
            android:id="@+id/optChatAi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_guide_question"
            android:button="@null"
            android:checked="true"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_background"
            android:textColor="@drawable/button_text_color" />

        <RadioButton
            android:id="@+id/optAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_answer"
            android:enabled="false"
            android:button="@null"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_background"
            android:textColor="@drawable/button_text_color"
            android:layout_marginHorizontal="4dp" />

        <RadioButton
            android:id="@+id/optSimilar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/similar_questions"
            android:enabled="false"
            android:button="@null"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_background"
            android:textColor="@drawable/button_text_color"
            android:layout_marginHorizontal="4dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoot_question"
        android:background="@drawable/button_background"
        android:textColor="@drawable/button_text_color"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/spliter0"
        app:layout_constraintStart_toEndOf="@id/radioGroup"/>

    <View
        android:id="@+id/spliter"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="2dp"
        app:layout_constraintTop_toBottomOf="@id/btn_capture"
        app:layout_constraintStart_toStartOf="@id/verticalGuide"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#80808080"/>

</androidx.constraintlayout.widget.ConstraintLayout>